--- a/index.html
+++ b/index.html
@@ -23,28 +23,18 @@
     </header>
 
     <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Upgrade to Ofspace Global</h1>
-                <p>Ofspace global is the most trusted cryptocurrency exchange known for its next-level security.</p>
-                <a href="#" class="btn">Free Account</a>
-            </div>
-            <div class="hero-image">
-                <img src="img/chicocelular.png" alt="Hero Image">
-            </div>
-            <div class="info-container"> 
-                <div class="info-boxes">
-                    <div class="info-box">
-                        <p>Unmatched security</p>
-                    </div>
-                    <div class="info-box">
-                        <p>The Wealth</p>
-                    </div>
-                    <div class="info-box">
-                        <p>Levereged Tocken</p>
-                    </div>
-                </div>
-            </div>
+        <div class="hero-content">
+            <div id="title">
+            <h1>
+                Upgrade <img src="img/BITCOIN NARANJA.png" alt="bitcoin-icon" style="width: 40px; height: 40px; vertical-align: middle;"><br>
+                to Ofspace<br>Global<img id="resorte" src="img/FLECHA AMARILLA.png" width="40px" height="40px">
+            </h1>
+        </div>      
+            <p>Ofspace global is the most trusted cryptocurrency<br>exchange known for its next-level security.</p>
+            <input type="image" src="img/FREE ACCOUNT.png" alt="Botón de Imagen" width="100" height="70" style="border-radius: 50%; border: none; cursor: pointer; object-fit: cover;">
+        </div>
+        <div class="hero-image">
+            <img src="img/chicocelular.png" alt="Man using a mobile device">
         </div>
     </section>
     <section class="coin-markets">
@@ -72,7 +62,7 @@
                 <h2>Your Access to the Top Coin Markets</h2>
                 <p>Capitalize on trends and trade with confidence through our expansive marketplace listings.</p>
                 <p>Buy, sell, and trade over 500 markets</p>
-                <a href="#" class="btn">Free Account</a>
+                <input type="image" src="img/FREE ACCOUNT.png" alt="Botón de Imagen" width="100" height="70" style="border-radius: 50%; border: none; cursor: pointer; object-fit: cover;">
             </div>
         </div>
     </section>
@@ -89,24 +79,30 @@
             </div>
         </div>
     </section>
-    <section class="exchange">
-        <div class="container">
-            <h2>We've Created an Exchange to Lead this Revolutionary Technology</h2>
-        </div>
-        <div class="exchange-cards">
-            <div class="exchange-card">
-                <img src="img/trading.png" alt="Great Trading">
-                <h3>Great Trading</h3>
-                <p>We believe in the potential to provide groundbreaking solutions across industries and beyond crypto.</p>
+    <section class="features">
+        <h2>We've Created an Exchange to<br>Lead this Revolutionary</h2>
+        <div class="features-grid">
+            <div class="feature-tile">
+                <h3>
+                    <img src="img/trading.png" alt="Trading Icon Small" class="feature-icon-small"><br>
+                    Great Trading
+                </h3>
+                <p>We believe in the  potential to provide  groundbreaking solutions across industries and beyond crypto    .</p>
             </div>
-            <div class="exchange-card">
-                <img src="img/escudo.png" alt="Security First">
-                <h3>Security First</h3>
+            
+            <div class="feature-tile">
+                <h3>
+                    <img src="img/escudo.png" alt="Security Icon Small" class="feature-icon-small"><br>
+                    Security First
+                </h3>
                 <p>When choosing an exchange, trust matters. That's why security has been our top consideration.</p>
             </div>
-            <div class="exchange-card">
-                <img src="img/tecnology.png" alt="Robust Technology">
-                <h3>Robust Technology</h3>
+            
+            <div class="feature-tile">
+                <h3>
+                    <img src="img/tecnology.png" alt="Technology Icon Small" class="feature-icon-small"><br>
+                    Robust Technology
+                </h3>
                 <p>When choosing an exchange, trust matters. That's why security has been our top consideration.</p>
             </div>
         </div>
@@ -171,7 +167,7 @@
     <footer class="footer-2">
         <div class="footer-left">
             <p>
-                nd the Company is authorized to carry on business in that capacity subject to the provisions of the said Act and the conditions set out in Schedule 1 attached hereto.
+                And the Company is authorized to carry on business in that capacity subject to the provisions of the said Act and the conditions set out in Schedule 1 attached hereto.
             </p>
         </div>
         <div class="footer-right">
