--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ofspace Global</title>
+    <title>Tu Página Web</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="#" class="logo">ofsp_ce</a>
-            <nav>
-                <ul>
+        <div class="barranavegacion">
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="Logo" />
+                </div>
+                <ul class="nav-links">
                     <li><a href="#">Instant Buy & Sell</a></li>
                     <li><a href="#">Markets</a></li>
                     <li><a href="#">Discover</a></li>
@@ -21,15 +23,14 @@
             </nav>
         </div>
     </header>
-
     <section class="hero">
         <div class="hero-content">
             <div id="title">
-            <h1>
-                Upgrade <img src="img/BITCOIN NARANJA.png" alt="bitcoin-icon" style="width: 40px; height: 40px; vertical-align: middle;"><br>
-                to Ofspace<br>Global<img id="resorte" src="img/FLECHA AMARILLA.png" width="40px" height="40px">
-            </h1>
-        </div>      
+                <h1>
+                    Upgrade <img src="img/BITCOIN NARANJA.png" alt="bitcoin-icon" style="width: 40px; height: 40px; vertical-align: middle;"><br>
+                    to Ofspace<br>Global<img id="resorte" src="img/FLECHA AMARILLA.png" width="40px" height="40px">
+                </h1>
+            </div>      
             <p>Ofspace global is the most trusted cryptocurrency<br>exchange known for its next-level security.</p>
             <input type="image" src="img/FREE ACCOUNT.png" alt="Botón de Imagen" width="100" height="70" style="border-radius: 50%; border: none; cursor: pointer; object-fit: cover;">
         </div>
@@ -71,7 +72,7 @@
             <div class="leader-left">
                 <h2>Every Revolution Needs a Leader</h2>
                 <p>Bitcoin is storming the Bastille, and we're up front.</p>
-                <p>Trading platform is designed for those who grasp the power of blockchain's promise.</p>
+                <p>Trading platform is designed for those<br>grasp the power of blockchain's promise.</p>
                 <p>We've created an exchange to lead this revolutionary technology.</p>
             </div>
             <div class="leader-right">
@@ -80,7 +81,7 @@
         </div>
     </section>
     <section class="features">
-        <h2>We've Created an Exchange to<br>Lead this Revolutionary</h2>
+        <center><h2>We've Created an Exchange to<br>Lead this Revolutionary</h2></center>
         <div class="features-grid">
             <div class="feature-tile">
                 <h3>
@@ -134,7 +135,7 @@
             <div style="display: flex; justify-content: center; gap: 20px;">
                 <div style="background-color: #ffffff; padding: 20px; border-radius: 10px; max-width: 450px; text-align: left; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                     <img src="img/chico.png" alt="Create Your Account" style="width: 60%; height: auto; border-radius: 10px;">
-                    <h3 style="color: #2d3748; font-size: 1.5em; margin-top: 20px;">Create Your Account to Get Started.</h3>
+                    <h3 style="color: #2d3748; font-size: 1.5em; margin-top: 15px;">Create Your Account to Get Started.</h3>
                     <a href="#" style="color: #0dff21; font-size: 1.125em;">Join Today →</a>
                 </div>
                 <div style="background-color: #ffffff; padding: 20px; border-radius: 10px; max-width: 450px; text-align: left; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
@@ -145,36 +146,36 @@
             </div>
         </div>
     </section>
-    
-    <footer class="footer-1">
-        <div class="footer-left">
-            <div class="logo">ofsp_ce</div>
-            <nav>
+    <footer>
+        <div class="footer-container">
+            <a href="#" class="footer-logo">
+                <img src="img/logo2.png" alt="Logo" />
+            </a>
+            <div class="footer-links-center">
                 <a href="#">Our customers</a>
                 <a href="#">Blog</a>
                 <a href="#">Legal documents</a>
                 <a href="#">Cookies</a>
                 <a href="#">Privacy policy</a>
-            </nav>
-        </div>
-        <div class="footer-right">
-            <a href="#">Support</a>
-            <a href="#">Website Status</a>
+            </div>
+            <div class="footer-links-right">
+                <a href="#">Support</a>
+                <a href="#">Website Status</a>
+            </div>
         </div>
     </footer>
-
-    <!-- Segundo Footer -->
-    <footer class="footer-2">
-        <div class="footer-left">
-            <p>
-                And the Company is authorized to carry on business in that capacity subject to the provisions of the said Act and the conditions set out in Schedule 1 attached hereto.
-            </p>
-        </div>
-        <div class="footer-right">
-            <!-- Reemplaza las rutas de las imágenes con las correctas -->
-            <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
-            <a href="#"><img src="img/facebook.png" alt="Facebook" /></a>
-            <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
+    <footer class="footer2">
+        <div class="footer2-container">
+            <div class="footer2-info">
+                <p>
+                    And the Company is authorized to carry on business in that capacity subject<br>to the provisions of the said Act and the conditions<br>set out in Schedule 1 attached hereto.
+                </p>
+            </div>
+            <div class="footer2-social">
+                <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
+                <a href="#"><img src="img/facebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter" /></a>
+            </div>
         </div>
     </footer>
 </body>
