--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HOSTING, hosting, Hosting, ILIMITADO, ilimitado, Ilimitado">
     <title>Tu Página Web</title>
     <link rel="stylesheet" href="styles.css">
 </head>
